--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -300,7 +300,7 @@
                 <div layout="column" layout-gt-xs="row">
                   <div flex="100" flex-gt-sm="50">
                     Problemas de saúde na família?
-                    <md-checkbox ng-model="vm.saude.problemas_de_saude_na_familia" aria-label="Problemas de saúde na família?">
+                    <md-checkbox ng-model="vm.saude.problemas_saude_familia" aria-label="Problemas de saúde na família?">
                     </md-checkbox>
                   </div>
                 </div>
@@ -308,7 +308,7 @@
                 <div layout="column" layout-gt-xs="row">
                   <div flex="100" flex-gt-sm="50">
                     Possui plano de saúde?
-                    <md-checkbox ng-model="vm.saude.plano_de_saude" aria-label="Possui plano de saúde">
+                    <md-checkbox ng-model="vm.saude.plano_saude" aria-label="Possui plano de saúde">
                     </md-checkbox>
                   </div>
                 </div>
@@ -678,13 +678,13 @@
 
                   <div flex="100" flex-gt-sm="50">
                     Tablets
-                    <md-checkbox ng-model="vm.aparelhos_eletronicos.tablets" aria-label="Tablets">
+                    <md-checkbox ng-model="vm.aparelhos_eletronicos.tablet" aria-label="Tablets">
                     </md-checkbox>
                   </div>
 
                   <div flex="100" flex-gt-sm="50">
                     Máquina de lavar
-                    <md-checkbox ng-model="vm.aparelhos_eletronicos.maquina_de_lavar" aria-label="Máquina de lavar">
+                    <md-checkbox ng-model="vm.aparelhos_eletronicos.maquina_lavar" aria-label="Máquina de lavar">
                     </md-checkbox>
                   </div>
                 </div>
@@ -692,7 +692,7 @@
                 <div layout="column" layout-gt-xs="row">
                   <div flex="100" flex-gt-sm="50">
                     Máquina de secar
-                    <md-checkbox ng-model="vm.aparelhos_eletronicos.maquina_de_secar" aria-label="Máquina de secar">
+                    <md-checkbox ng-model="vm.aparelhos_eletronicos.maquina_secar" aria-label="Máquina de secar">
                     </md-checkbox>
                   </div>
 
