Fix values of inputs

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -419,7 +419,7 @@
 
                   <p>
                     Financiado?
-                    <md-checkbox ng-model="c.financiado" aria-label="Possui automóveis" value={{c.financiado}}>
+                    <md-checkbox ng-model="c.financiado" aria-label="Possui automóveis" value="{{c.financiado}}">
                     </md-checkbox>
                   </p>
 
@@ -447,7 +447,7 @@
 
                   <div flex="150" flex-gt-xs="10">
                     Financiado?
-                    <md-checkbox ng-model="i.financiado" aria-label="Possui imoveis" value={{i.financiado}}>
+                    <md-checkbox ng-model="i.financiado" aria-label="Possui imoveis" value="{{i.financiado}}">
                     </md-checkbox>
                   </div>
 
