Fixed date fomat issue

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -203,7 +203,7 @@
               {{aluno.turma.educador}}
             </p>
             <p class="hide show-gt-sm data dataNascAluno">
-              {{aluno.data_nascimento}}
+              {{aluno.data_nascimento | date : "dd/MM/yyyy"}}
             </p>
 
           </div>
