Fix Relatório Financeiro text alignment and Gerenciar Pagamentos 'Forma de Pagamento' width

--- a/frontend/src/main/frontend/src/app/main/pagamento/dialogs/pagamento/pagamento-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/pagamento/dialogs/pagamento/pagamento-dialog.html
@@ -64,7 +64,7 @@
       <md-input-container>
         <label>Forma de Pagamento</label>
         <md-icon md-font-icon="icon-credit-card"></md-icon>
-        <md-select ng-model="vm.pagamento.formaPgto.formaPagamento">
+        <md-select class="formaPagamento" ng-model="vm.pagamento.formaPgto.formaPagamento">
           <md-option value="Boleto">Boleto</md-option>
           <md-option value="Cartão">Cartão</md-option>
           <md-option value="Dinheiro">Dinheiro</md-option>
