--- a/frontend/src/main/frontend/src/app/main/pagamento/dialogs/pagamento/pagamento-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/pagamento/dialogs/pagamento/pagamento-dialog.scss
@@ -84,5 +84,11 @@ md-dialog {
             background-color: rgba(0, 0, 0, 0.03);
             border-top: 1px solid rgba(0, 0, 0, 0.12);
         }
+
+        md-select {
+            &.formaPagamento {
+                width: 180px;
+            }
+        }
     }
 }
