--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -430,8 +430,6 @@
 
                 </div>
 
-
-
                 <div layout="column" layout-gt-xs="row">
                   <div flex="100" flex-gt-sm="50">
                     Possui imóveis?
@@ -475,7 +473,7 @@
               </span>
             </md-tab-label>
             <md-tab-body>
-              <form name="wizardStep6" ms-form-wizard-form novalidate>
+              <form name="wizardStep6" ms-form-wizard-form>
 
                 <div layout="column" layout-gt-xs="row" ng-repeat="p in vm.parentes track by $index">
                   <md-input-container flex="100" flex-gt-xs="20">
@@ -492,8 +490,8 @@
                     </md-input-container>
 
 
-                    <md-input-container>
-                      <md-datepicker ng-model="p.data_nascimento" md-placeholder="Nascimento" md-open-on-focus></md-datepicker>
+                    <md-input-container flex="100" flex-gt-xs="10" validate="false" mask-validate="false" required="false" ng-required="false" novalidate>
+                      <md-datepicker ng-model="p.data_nascimento" md-placeholder="Nascimento" md-open-on-focus validate="false" mask-validate="false" required="false" ng-required="false" novalidate aria-invalid="false"></md-datepicker>
                     </md-input-container>
 
 
@@ -839,7 +837,7 @@
           <md-button class="md-raised md-accent" ng-click="msWizard.nextStep()" ng-hide="msWizard.isLastStep()" ng-disabled="msWizard.currentStepInvalid()">
             Proximo
           </md-button>
-          <md-button class="md-raised md-warn" ng-click="vm.sendForm(); msWizard.resetForm();" ng-show="msWizard.isLastStep()" ng-disabled="msWizard.formsIncomplete()">
+          <md-button class="md-raised md-warn" ng-click="vm.sendForm(); msWizard.resetForm(); vm.routeReload();" ng-show="msWizard.isLastStep()" ng-disabled="msWizard.formsIncomplete()">
             Enviar
           </md-button>
         </div>
