Remove useless properties

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -494,8 +494,8 @@
                       </md-select>
                     </md-input-container>
 
-                    <md-input-container flex="100" flex-gt-xs="10" validate="false" mask-validate="false" required="false" ng-required="false" novalidate>
-                      <md-datepicker ng-model="p.data_nascimento" md-placeholder="Nascimento" md-open-on-focus validate="false" mask-validate="false" required="false" ng-required="false" novalidate aria-invalid="false"></md-datepicker>
+                    <md-input-container>
+                      <md-datepicker ng-model="p.data_nascimento" md-placeholder="Nascimento" md-open-on-focus ng-required="false" novalidate aria-invalid="false"></md-datepicker>
                     </md-input-container>
 
                   </div>
