--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
@@ -195,6 +195,36 @@
         right: 8px;
         padding: 0;
     }
+
+    md-list-item, md-list-item .md-list-item-inner {
+        min-height: 48px;
+        height: 48px;
+    }
+
+    div.item p.data{
+        width: 200px;
+        text-align: right;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    div.item p.texto{
+        width: 220px;
+        text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    div.item p.numero{
+        width: 100px;
+        text-align: left;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
 }
 
 // RESPONSIVE
