--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
@@ -203,7 +203,7 @@
 
     div.item p.data{
         width: 200px;
-        text-align: right;
+        text-align: center;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -211,15 +211,17 @@
 
     div.item p.texto{
         width: 220px;
-        text-align: center;
+        text-align: left;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
 
     div.item p.numero{
-        width: 100px;
-        text-align: left;
+        width: 50px;
+        padding-right: 140px;
+        font-weight: bold;
+        text-align: right;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
