Rename aluno variables names

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<link href="aluno.scss" rel="stylesheet" />
 <div id="alunos" class="page-layout simple inner-sidenav">
 
   <!-- HEADER -->
@@ -202,7 +201,7 @@
               {{aluno.turma.educador}}
             </p>
             <p class="data dataNascAluno">
-              {{aluno.data_nascimento | date : "dd/MM/yyyy"}}
+              {{aluno.dataNascimento | date : "dd/MM/yyyy"}}
             </p>
 
           </div>
