Renamed few labels and add some Camiseta and Caça sizes

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -460,7 +460,7 @@
               <span class="ms-form-wizard-step-number md-accent-bg" ng-if="wizardStep6.$valid">
                                   <i class="icon-check s16"></i>
                               </span>
-              <span class="ms-form-wizard-step-text">Parentes</span>
+              <span class="ms-form-wizard-step-text">Composição Familiar</span>
               </span>
             </md-tab-label>
             <md-tab-body>
@@ -497,7 +497,7 @@
                     </md-input-container>
 
                     <md-input-container flex="100" flex-gt-xs="10">
-                      <input type="text" name="salario" ng-model="p.salario" ui-money-mask placeholder="Salário">
+                      <input type="text" name="salario" ng-model="p.salario" ui-money-mask placeholder="Renda">
                     </md-input-container>
 
                     <md-input-container flex="100" flex-gt-xs="20">
@@ -776,7 +776,7 @@
                   </md-input-container>
 
                   <md-input-container flex="100" flex-gt-xs="20">
-                    <input type="text" name="tvCabo" ng-model="vm.despesa.tvCabo" ui-money-mask placeholder="TV a cabo" required>
+                    <input type="text" name="tvCabo" ng-model="vm.despesa.tvCabo" ui-money-mask placeholder="TV por assinatura/internet" required>
                   </md-input-container>
                 </div>
 
